# NewPartnerOnboarding

./: .gitignore  README.md
partner-onboarding-python/: app.py  database.py  requirements.txt
partner-onboarding-python/models/: tables.py
partner-onboarding-python/request_types/: new_account.py
partner-onboarding-python/tests/: new client portal.postman_collection.json
partner-onboarding-react-app/: package-lock.json  package.json
partner-onboarding-react-app/src/: App.tsx
partner-onboarding-react-app/src/components/: AccountForm.tsx  IdentificationUpload.tsx  TaxResidencyForm.tsx
partner-onboarding-rust-api/: Cargo.toml
partner-onboarding-rust-api/src/: db.rs  main.rs  models.rs  schema.rs
partner-onboarding-rust-api/tests/: test_conn.rs
scripts/: env_bucket.json  make_s3_with_aim.sh  s3-upload-policy.json
